[package]
name = "built_with_bevy"
description = "Splashscreen animation for bevy games"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
bevy_vello = { version = "0.13", features = ["svg"] }
bevy-inspector-egui = "0.36"
iyes_perf_ui = { git = "https://github.com/blip-radar/iyes_perf_ui", branch = "bevy-0-18" }
